# genetic_antenna

./: .gitignore  CMakeLists.txt  geometry_test.txt  main.c  plot_test.cpp
cpp_src/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  evolution.cpp  evolution.h  fitness.cpp  fitness.h  fitness_functions.cpp  fitness_functions.h  genetic_antenna.cbp  main.cpp  main.h  mutation_functions.cpp  mutation_functions.h  physical_calculations.cpp  physical_calculations.h  print.cpp  print.h  utils.cpp  utils.h  vcpkg.json  wire_geometry.cpp  wire_geometry.h
cpp_src/telemetry/: telemetry.csv
python_src/: .~lock.population_230617_053924392.csv#  convert_geometry_to_4nec2_format.py  population_230617_053924392.csv  population_230619_183223200.csv  population_show.py  wire_visualization.py
